[feature/correctifs] animation wrap-description in js

--- a/src/app/components/videos/videos.component.scss
+++ b/src/app/components/videos/videos.component.scss
@@ -52,7 +52,7 @@
         height:100%;
         overflow-y: auto;
         >div{
-            margin-bottom:10px;
+            margin-bottom:20px;
         }
     }
     #wrap-gear{
